<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.testlock.MainActivity" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical">
        
        <include layout="@layout/fragment_title"/>
        <include layout="@layout/fragment_line"/>
        
            <android.support.v4.view.ViewPager
            android:id="@+id/viewpaper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
           >
        </android.support.v4.view.ViewPager>

        <include layout="@layout/fragment_line"/>    
            
        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView_home"
                style="@style/text_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/btn_home"
                android:text="@string/home" >
            </TextView>


            <TextView
                android:id="@+id/textView_setting"
                style="@style/text_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/btn_setting"
                android:text="@string/setting" >
            </TextView>
            
             <TextView
                android:id="@+id/textView_scan"
                style="@style/text_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/btn_scan"
                android:text="@string/add" >
            </TextView>
            

            <TextView
                android:id="@+id/textView_help"
                style="@style/text_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/btn_help"
                android:text="@string/help" >
            </TextView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>