<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout="@layout/fragment_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                 >
                 
                 <RelativeLayout
                    android:id="@+id/layout_qrcode"
                    android:onClick="onClick"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_qrcode"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qrcode" />
                </RelativeLayout>

                <include layout="@layout/fragment_line_paddingleft" />

                <RelativeLayout
                    android:id="@+id/layout_lockinfo"
                    android:onClick="onClick"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_lock_info"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lock_info" />
                </RelativeLayout>

                <include layout="@layout/fragment_line_paddingleft" />
                
                <RelativeLayout
                    android:id="@+id/layout_installinfo"
                    android:onClick="onClick"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_installinfo"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/installinfo" />
                </RelativeLayout>

                <include layout="@layout/fragment_line_paddingleft" />

                <!-- <RelativeLayout
                     android:id="@+id/layout_appinfo"
                    android:onClick="onClick"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_appinfo"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_info" />

                    <TextView
                        style="@style/text_normal_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true" >
                    </TextView>
                </RelativeLayout>

                <include layout="@layout/fragment_line_paddingleft" /> -->

                <RelativeLayout
                     android:id="@+id/layout_versioninfo"
                    android:onClick="onClick"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_versioninfo"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version_info" />
                    
                    <TextView
                        android:id="@+id/textView_versionName"
                       style="@style/text_normal_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></TextView>
                </RelativeLayout>

                <include layout="@layout/fragment_line_paddingleft" />

                <RelativeLayout
                     android:id="@+id/layout_lawinfo"
                    android:onClick="onClick"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_lawinfo"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/law_info" />

                </RelativeLayout>
                
                  <include layout="@layout/fragment_line_paddingleft" />

                <RelativeLayout
                    android:id="@+id/layout_language"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/text_normal"
                        android:id="@+id/textView_languageChange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language_change" />

                    <TextView
                        android:id="@+id/textView_language"
                        style="@style/text_normal_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/language_default" >
                    </TextView>
                </RelativeLayout>
                
                 <include layout="@layout/fragment_line_paddingleft" />
                 
                 
                 <RelativeLayout
                    android:id="@+id/layout_exit_choise"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/text_normal"
                        android:id="@+id/textView_exit_choise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/close_bt" />
                    
                    <CheckBox 
		            android:id="@+id/checkBox_closeBT"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		             android:layout_alignParentRight="true"
		             android:clickable="true"
		             android:button="@null"
		            android:background="@drawable/cb_green"/>

                </RelativeLayout>
                
                 <include layout="@layout/fragment_line_paddingleft" />

                <RelativeLayout
                    android:id="@+id/layout_exit"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/text_normal"
                        android:id="@+id/textView_exit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exit" />

                </RelativeLayout>

             
            </LinearLayout>

            <include layout="@layout/fragment_line" />
            
            
            
        </LinearLayout>
    

</LinearLayout>
