<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    
    <include layout="@layout/fragment_title"/>
    
    <include layout="@layout/fragment_line"/>
    
    <RelativeLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/bg_main">
        
        <TextView
            android:id="@+id/textView_name" style="@style/text_small"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            ></TextView>
        
         <TextView
            android:id="@+id/textView_title_small" 
            style="@style/text_small"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
             android:paddingTop="2dp"
            android:paddingBottom="2dp"
            ></TextView>
            
            
        
    </RelativeLayout>
    
    <include layout="@layout/fragment_line"/>
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_content"
        android:paddingRight="@dimen/activity_content"
        android:paddingTop="@dimen/view_padding"
        >
         
        <EditText 
            android:id="@+id/editText_old"
              android:password="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/view_padding"
            android:paddingBottom="@dimen/view_padding"
            android:hint="@string/password_input_old"
            android:maxLength="6"
            android:inputType="numberSigned"
            android:imeOptions="actionNext"
            android:background="@drawable/bg_edit"/>
        
        <EditText 
            android:id="@+id/editText_new"
            android:password="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/view_padding"
            android:paddingBottom="@dimen/view_padding"
            android:hint="@string/password_input_new"
            android:layout_marginTop="@dimen/activity_content"
            android:layout_marginBottom="@dimen/activity_content"
            android:imeOptions="actionNext"
             android:maxLength="6"
            android:inputType="numberSigned"
            android:background="@drawable/bg_edit"/>
        
        
        <EditText 
            android:id="@+id/editText_confirm"
            android:password="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/view_padding"
            android:paddingBottom="@dimen/view_padding"
            android:hint="@string/password_input_confirm"
            android:imeOptions="actionDone"
             android:maxLength="6"
            android:inputType="numberSigned"
            android:background="@drawable/bg_edit"/>
        
        
    </LinearLayout>
    
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_content"
        android:paddingRight="@dimen/activity_content"
        android:paddingTop="20dp"
        >
        
        <Button
            android:id="@+id/btn_confirm"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/text_big"
            android:gravity="center"
            android:padding="@dimen/view_padding"
            android:textColor="#FFFFFF"
            android:text="@string/confirm"
            android:onClick="onClick"
            android:background="@drawable/btn_confirm2"></Button>
        
    </LinearLayout>

</LinearLayout>
