<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    	

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
             <include layout="@layout/fragment_title"/>

            <include layout="@layout/fragment_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/bg_main"
                 >

                <RelativeLayout
                    android:id="@+id/layout_unlock_auto"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unlock_auto" />


                    <CheckBox
                        android:id="@+id/checkBox_unlock_auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/cb_green2"
                        android:button="@null"
                        android:clickable="false"
                        android:focusable="false" />
                </RelativeLayout>

                <include layout="@layout/fragment_line_paddingleft" />

                <RelativeLayout
                    android:id="@+id/layout_unlock_scroll"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/unlock_onekey" />

                    <CheckBox
                        android:id="@+id/checkBox_unlock_scroll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/cb_green2"
                        android:button="@null"
                        android:clickable="false"
                        android:focusable="false" />

                </RelativeLayout>

                <include layout="@layout/fragment_line_paddingleft" />

                <RelativeLayout
                    android:id="@+id/layout_unlock_password"
                    style="@style/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/unlock_password" />
                    
                     <CheckBox
                        android:id="@+id/checkBox_unlock_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/cb_green2"
                        android:button="@null"
                        android:clickable="false"
                        android:focusable="false" />
                </RelativeLayout>

                <include layout="@layout/fragment_line" />

                
            </LinearLayout>

            <include layout="@layout/fragment_line" />
        </LinearLayout>

</LinearLayout>